--- a/app.json
+++ b/app.json
@@ -22,8 +22,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
+      
         "backgroundColor": "#FFFFFF"
-      }
+      },
+        "useNextNotificationsApi": true
     },
     "web": {
       "favicon": "./assets/favicon.png"
