--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.0.8",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^10.4.0",
     "@react-native-firebase/auth": "^10.4.0",
@@ -19,6 +20,7 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~40.0.0",
+    "expo-notifications": "^0.8.2",
     "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
     "moment": "^2.29.1",
